fix: rooms not showing after signin in if not refreshed and interchanged visibility icons

--- a/src/components/componetsStyles/Sidebar.css
+++ b/src/components/componetsStyles/Sidebar.css
@@ -90,3 +90,15 @@ select {
   border-radius: 10px;
   cursor: pointer;
 }
+
+.private {
+  font-weight: bold;
+  color: green;
+  text-align: center;
+}
+
+.privateMessage {
+  color: red;
+  font-weight: bold;
+  text-align: center;
+}
